// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Main
    category=""
    categoryData={
        Array [
            Object {
              "class": "wheeled",
              "model": "Digger Crawler",
              "name": "Sand Crawler",
              "passengers": "30",
            },
            Object {
              "class": "repulsorcraft",
              "model": "T-16 skyhopper",
              "name": "T-16 skyhopper",
              "passengers": "1",
            },
            Object {
              "class": "repulsorcraft",
              "model": "X-34 landspeeder",
              "name": "X-34 landspeeder",
              "passengers": "1",
            },
            Object {
              "class": "starfighter",
              "model": "Twin Ion Engine/Ln Starfighter",
              "name": "TIE/LN starfighter",
              "passengers": "0",
            },
            Object {
              "class": "airspeeder",
              "model": "t-47 airspeeder",
              "name": "Snowspeeder",
              "passengers": "0",
            },
            Object {
              "class": "space/planetary bomber",
              "model": "TIE/sa bomber",
              "name": "TIE bomber",
              "passengers": "0",
            },
            Object {
              "class": "assault walker",
              "model": "All Terrain Armored Transport",
              "name": "AT-AT",
              "passengers": "40",
            },
            Object {
              "class": "walker",
              "model": "All Terrain Scout Transport",
              "name": "AT-ST",
              "passengers": "0",
            },
            Object {
              "class": "repulsorcraft",
              "model": "Storm IV Twin-Pod",
              "name": "Storm IV Twin-Pod cloud car",
              "passengers": "0",
            },
            Object {
              "class": "sail barge",
              "model": "Modified Luxury Sail Barge",
              "name": "Sail barge",
              "passengers": "500",
            },
          ]
    }
    favorites={Array []}
    randomFilmCrawl={
        Object {
            "crawl": "Film Crawl",
            "date": "1982-09-18",
            "title": "Movie Title",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Crawl
        randomFilmCrawl={
                Object {
                        "crawl": "Film Crawl",
                        "date": "1982-09-18",
                        "title": "Movie Title",
                      }
        }
/>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "randomFilmCrawl": Object {
          "crawl": "Film Crawl",
          "date": "1982-09-18",
          "title": "Movie Title",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Crawl
          randomFilmCrawl={
                    Object {
                              "crawl": "Film Crawl",
                              "date": "1982-09-18",
                              "title": "Movie Title",
                            }
          }
/>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "randomFilmCrawl": Object {
            "crawl": "Film Crawl",
            "date": "1982-09-18",
            "title": "Movie Title",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Main matches the snapshot with category selected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Main
    category=""
    categoryData={
        Array [
            Object {
              "class": "wheeled",
              "model": "Digger Crawler",
              "name": "Sand Crawler",
              "passengers": "30",
            },
            Object {
              "class": "repulsorcraft",
              "model": "T-16 skyhopper",
              "name": "T-16 skyhopper",
              "passengers": "1",
            },
            Object {
              "class": "repulsorcraft",
              "model": "X-34 landspeeder",
              "name": "X-34 landspeeder",
              "passengers": "1",
            },
            Object {
              "class": "starfighter",
              "model": "Twin Ion Engine/Ln Starfighter",
              "name": "TIE/LN starfighter",
              "passengers": "0",
            },
            Object {
              "class": "airspeeder",
              "model": "t-47 airspeeder",
              "name": "Snowspeeder",
              "passengers": "0",
            },
            Object {
              "class": "space/planetary bomber",
              "model": "TIE/sa bomber",
              "name": "TIE bomber",
              "passengers": "0",
            },
            Object {
              "class": "assault walker",
              "model": "All Terrain Armored Transport",
              "name": "AT-AT",
              "passengers": "40",
            },
            Object {
              "class": "walker",
              "model": "All Terrain Scout Transport",
              "name": "AT-ST",
              "passengers": "0",
            },
            Object {
              "class": "repulsorcraft",
              "model": "Storm IV Twin-Pod",
              "name": "Storm IV Twin-Pod cloud car",
              "passengers": "0",
            },
            Object {
              "class": "sail barge",
              "model": "Modified Luxury Sail Barge",
              "name": "Sail barge",
              "passengers": "500",
            },
          ]
    }
    favorites={Array []}
    randomFilmCrawl={
        Object {
            "crawl": "Film Crawl",
            "date": "1982-09-18",
            "title": "Movie Title",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Crawl
        randomFilmCrawl={
                Object {
                        "crawl": "Film Crawl",
                        "date": "1982-09-18",
                        "title": "Movie Title",
                      }
        }
/>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "randomFilmCrawl": Object {
          "crawl": "Film Crawl",
          "date": "1982-09-18",
          "title": "Movie Title",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Crawl
          randomFilmCrawl={
                    Object {
                              "crawl": "Film Crawl",
                              "date": "1982-09-18",
                              "title": "Movie Title",
                            }
          }
/>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "randomFilmCrawl": Object {
            "crawl": "Film Crawl",
            "date": "1982-09-18",
            "title": "Movie Title",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Main matches the snapshot with category selected and favorites added 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Main
    category="mock category"
    categoryData={
        Array [
            Object {
              "class": "wheeled",
              "model": "Digger Crawler",
              "name": "Sand Crawler",
              "passengers": "30",
            },
            Object {
              "class": "repulsorcraft",
              "model": "T-16 skyhopper",
              "name": "T-16 skyhopper",
              "passengers": "1",
            },
            Object {
              "class": "repulsorcraft",
              "model": "X-34 landspeeder",
              "name": "X-34 landspeeder",
              "passengers": "1",
            },
            Object {
              "class": "starfighter",
              "model": "Twin Ion Engine/Ln Starfighter",
              "name": "TIE/LN starfighter",
              "passengers": "0",
            },
            Object {
              "class": "airspeeder",
              "model": "t-47 airspeeder",
              "name": "Snowspeeder",
              "passengers": "0",
            },
            Object {
              "class": "space/planetary bomber",
              "model": "TIE/sa bomber",
              "name": "TIE bomber",
              "passengers": "0",
            },
            Object {
              "class": "assault walker",
              "model": "All Terrain Armored Transport",
              "name": "AT-AT",
              "passengers": "40",
            },
            Object {
              "class": "walker",
              "model": "All Terrain Scout Transport",
              "name": "AT-ST",
              "passengers": "0",
            },
            Object {
              "class": "repulsorcraft",
              "model": "Storm IV Twin-Pod",
              "name": "Storm IV Twin-Pod cloud car",
              "passengers": "0",
            },
            Object {
              "class": "sail barge",
              "model": "Modified Luxury Sail Barge",
              "name": "Sail barge",
              "passengers": "500",
            },
          ]
    }
    favorites={Array []}
    randomFilmCrawl={
        Object {
            "crawl": "Film Crawl",
            "date": "1982-09-18",
            "title": "Movie Title",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Card
          cardObj={
                    Object {
                              "class": "wheeled",
                              "model": "Digger Crawler",
                              "name": "Sand Crawler",
                              "passengers": "30",
                            }
          }
          favoriteBool={false}
          updateFavorites={undefined}
/>,
        <Card
          cardObj={
                    Object {
                              "class": "repulsorcraft",
                              "model": "T-16 skyhopper",
                              "name": "T-16 skyhopper",
                              "passengers": "1",
                            }
          }
          favoriteBool={false}
          updateFavorites={undefined}
/>,
        <Card
          cardObj={
                    Object {
                              "class": "repulsorcraft",
                              "model": "X-34 landspeeder",
                              "name": "X-34 landspeeder",
                              "passengers": "1",
                            }
          }
          favoriteBool={false}
          updateFavorites={undefined}
/>,
        <Card
          cardObj={
                    Object {
                              "class": "starfighter",
                              "model": "Twin Ion Engine/Ln Starfighter",
                              "name": "TIE/LN starfighter",
                              "passengers": "0",
                            }
          }
          favoriteBool={false}
          updateFavorites={undefined}
/>,
        <Card
          cardObj={
                    Object {
                              "class": "airspeeder",
                              "model": "t-47 airspeeder",
                              "name": "Snowspeeder",
                              "passengers": "0",
                            }
          }
          favoriteBool={false}
          updateFavorites={undefined}
/>,
        <Card
          cardObj={
                    Object {
                              "class": "space/planetary bomber",
                              "model": "TIE/sa bomber",
                              "name": "TIE bomber",
                              "passengers": "0",
                            }
          }
          favoriteBool={false}
          updateFavorites={undefined}
/>,
        <Card
          cardObj={
                    Object {
                              "class": "assault walker",
                              "model": "All Terrain Armored Transport",
                              "name": "AT-AT",
                              "passengers": "40",
                            }
          }
          favoriteBool={false}
          updateFavorites={undefined}
/>,
        <Card
          cardObj={
                    Object {
                              "class": "walker",
                              "model": "All Terrain Scout Transport",
                              "name": "AT-ST",
                              "passengers": "0",
                            }
          }
          favoriteBool={false}
          updateFavorites={undefined}
/>,
        <Card
          cardObj={
                    Object {
                              "class": "repulsorcraft",
                              "model": "Storm IV Twin-Pod",
                              "name": "Storm IV Twin-Pod cloud car",
                              "passengers": "0",
                            }
          }
          favoriteBool={false}
          updateFavorites={undefined}
/>,
        <Card
          cardObj={
                    Object {
                              "class": "sail barge",
                              "model": "Modified Luxury Sail Barge",
                              "name": "Sail barge",
                              "passengers": "500",
                            }
          }
          favoriteBool={false}
          updateFavorites={undefined}
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "cardObj": Object {
            "class": "wheeled",
            "model": "Digger Crawler",
            "name": "Sand Crawler",
            "passengers": "30",
          },
          "favoriteBool": false,
          "updateFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "cardObj": Object {
            "class": "repulsorcraft",
            "model": "T-16 skyhopper",
            "name": "T-16 skyhopper",
            "passengers": "1",
          },
          "favoriteBool": false,
          "updateFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "cardObj": Object {
            "class": "repulsorcraft",
            "model": "X-34 landspeeder",
            "name": "X-34 landspeeder",
            "passengers": "1",
          },
          "favoriteBool": false,
          "updateFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "cardObj": Object {
            "class": "starfighter",
            "model": "Twin Ion Engine/Ln Starfighter",
            "name": "TIE/LN starfighter",
            "passengers": "0",
          },
          "favoriteBool": false,
          "updateFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "function",
        "props": Object {
          "cardObj": Object {
            "class": "airspeeder",
            "model": "t-47 airspeeder",
            "name": "Snowspeeder",
            "passengers": "0",
          },
          "favoriteBool": false,
          "updateFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "5",
        "nodeType": "function",
        "props": Object {
          "cardObj": Object {
            "class": "space/planetary bomber",
            "model": "TIE/sa bomber",
            "name": "TIE bomber",
            "passengers": "0",
          },
          "favoriteBool": false,
          "updateFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "6",
        "nodeType": "function",
        "props": Object {
          "cardObj": Object {
            "class": "assault walker",
            "model": "All Terrain Armored Transport",
            "name": "AT-AT",
            "passengers": "40",
          },
          "favoriteBool": false,
          "updateFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "7",
        "nodeType": "function",
        "props": Object {
          "cardObj": Object {
            "class": "walker",
            "model": "All Terrain Scout Transport",
            "name": "AT-ST",
            "passengers": "0",
          },
          "favoriteBool": false,
          "updateFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "8",
        "nodeType": "function",
        "props": Object {
          "cardObj": Object {
            "class": "repulsorcraft",
            "model": "Storm IV Twin-Pod",
            "name": "Storm IV Twin-Pod cloud car",
            "passengers": "0",
          },
          "favoriteBool": false,
          "updateFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "9",
        "nodeType": "function",
        "props": Object {
          "cardObj": Object {
            "class": "sail barge",
            "model": "Modified Luxury Sail Barge",
            "name": "Sail barge",
            "passengers": "500",
          },
          "favoriteBool": false,
          "updateFavorites": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "main",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Card
            cardObj={
                        Object {
                                    "class": "wheeled",
                                    "model": "Digger Crawler",
                                    "name": "Sand Crawler",
                                    "passengers": "30",
                                  }
            }
            favoriteBool={false}
            updateFavorites={undefined}
/>,
          <Card
            cardObj={
                        Object {
                                    "class": "repulsorcraft",
                                    "model": "T-16 skyhopper",
                                    "name": "T-16 skyhopper",
                                    "passengers": "1",
                                  }
            }
            favoriteBool={false}
            updateFavorites={undefined}
/>,
          <Card
            cardObj={
                        Object {
                                    "class": "repulsorcraft",
                                    "model": "X-34 landspeeder",
                                    "name": "X-34 landspeeder",
                                    "passengers": "1",
                                  }
            }
            favoriteBool={false}
            updateFavorites={undefined}
/>,
          <Card
            cardObj={
                        Object {
                                    "class": "starfighter",
                                    "model": "Twin Ion Engine/Ln Starfighter",
                                    "name": "TIE/LN starfighter",
                                    "passengers": "0",
                                  }
            }
            favoriteBool={false}
            updateFavorites={undefined}
/>,
          <Card
            cardObj={
                        Object {
                                    "class": "airspeeder",
                                    "model": "t-47 airspeeder",
                                    "name": "Snowspeeder",
                                    "passengers": "0",
                                  }
            }
            favoriteBool={false}
            updateFavorites={undefined}
/>,
          <Card
            cardObj={
                        Object {
                                    "class": "space/planetary bomber",
                                    "model": "TIE/sa bomber",
                                    "name": "TIE bomber",
                                    "passengers": "0",
                                  }
            }
            favoriteBool={false}
            updateFavorites={undefined}
/>,
          <Card
            cardObj={
                        Object {
                                    "class": "assault walker",
                                    "model": "All Terrain Armored Transport",
                                    "name": "AT-AT",
                                    "passengers": "40",
                                  }
            }
            favoriteBool={false}
            updateFavorites={undefined}
/>,
          <Card
            cardObj={
                        Object {
                                    "class": "walker",
                                    "model": "All Terrain Scout Transport",
                                    "name": "AT-ST",
                                    "passengers": "0",
                                  }
            }
            favoriteBool={false}
            updateFavorites={undefined}
/>,
          <Card
            cardObj={
                        Object {
                                    "class": "repulsorcraft",
                                    "model": "Storm IV Twin-Pod",
                                    "name": "Storm IV Twin-Pod cloud car",
                                    "passengers": "0",
                                  }
            }
            favoriteBool={false}
            updateFavorites={undefined}
/>,
          <Card
            cardObj={
                        Object {
                                    "class": "sail barge",
                                    "model": "Modified Luxury Sail Barge",
                                    "name": "Sail barge",
                                    "passengers": "500",
                                  }
            }
            favoriteBool={false}
            updateFavorites={undefined}
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "cardObj": Object {
              "class": "wheeled",
              "model": "Digger Crawler",
              "name": "Sand Crawler",
              "passengers": "30",
            },
            "favoriteBool": false,
            "updateFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "cardObj": Object {
              "class": "repulsorcraft",
              "model": "T-16 skyhopper",
              "name": "T-16 skyhopper",
              "passengers": "1",
            },
            "favoriteBool": false,
            "updateFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "cardObj": Object {
              "class": "repulsorcraft",
              "model": "X-34 landspeeder",
              "name": "X-34 landspeeder",
              "passengers": "1",
            },
            "favoriteBool": false,
            "updateFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "cardObj": Object {
              "class": "starfighter",
              "model": "Twin Ion Engine/Ln Starfighter",
              "name": "TIE/LN starfighter",
              "passengers": "0",
            },
            "favoriteBool": false,
            "updateFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "function",
          "props": Object {
            "cardObj": Object {
              "class": "airspeeder",
              "model": "t-47 airspeeder",
              "name": "Snowspeeder",
              "passengers": "0",
            },
            "favoriteBool": false,
            "updateFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "5",
          "nodeType": "function",
          "props": Object {
            "cardObj": Object {
              "class": "space/planetary bomber",
              "model": "TIE/sa bomber",
              "name": "TIE bomber",
              "passengers": "0",
            },
            "favoriteBool": false,
            "updateFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "6",
          "nodeType": "function",
          "props": Object {
            "cardObj": Object {
              "class": "assault walker",
              "model": "All Terrain Armored Transport",
              "name": "AT-AT",
              "passengers": "40",
            },
            "favoriteBool": false,
            "updateFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "7",
          "nodeType": "function",
          "props": Object {
            "cardObj": Object {
              "class": "walker",
              "model": "All Terrain Scout Transport",
              "name": "AT-ST",
              "passengers": "0",
            },
            "favoriteBool": false,
            "updateFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "8",
          "nodeType": "function",
          "props": Object {
            "cardObj": Object {
              "class": "repulsorcraft",
              "model": "Storm IV Twin-Pod",
              "name": "Storm IV Twin-Pod cloud car",
              "passengers": "0",
            },
            "favoriteBool": false,
            "updateFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "9",
          "nodeType": "function",
          "props": Object {
            "cardObj": Object {
              "class": "sail barge",
              "model": "Modified Luxury Sail Barge",
              "name": "Sail barge",
              "passengers": "500",
            },
            "favoriteBool": false,
            "updateFavorites": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "main",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
